# Little-Software

./: README.md
[linux][trantor]文件传输器/client/: CMakeLists.txt
[linux][trantor]文件传输器/client/client/: CMakeLists.txt  client.cpp  protocolConverter.h
[linux][trantor]文件传输器/server/server/: CMakeLists.txt  server.cpp
[linux]文件传输器/: readme.md
[linux]文件传输器/client/client/: CMakeLists.txt  client.cpp  client.h
[linux]文件传输器/server/: CMakeLists.txt
[linux]文件传输器/server/server/: CMakeLists.txt  server.cpp  server.h
sql连接器/: CMakeLists.txt
sql连接器/include/: Sql_Connector.h  Sql_Controller.h
sql连接器/resource/: Sql_Connector.cc  Sql_Controller.cc  main.cpp
template/: CMakeLists.txt  readme.md
thread_pool/: CMakeLists.txt  readme.md
thread_pool/include/: Thread_Pool.h
thread_pool/resource/: Thread_Pool.cpp  example.cpp
密码生成器/: PasswordGenerator.cpp
文件查找/: findKeyWord.cpp
笔记/: C++ 操作 mysql数据库.md
软件设计师代码/: Decorator-cpp.cpp  Prototype-cpp.cpp  State-cpp.cpp
